Adds Recommendation By Popularity with following: - Adds story recommendation by story-views - Adds story recommendation by story-reads - Adds story recommendation by ratings - Adds story recommendation by comments - Adds story recommendation by purchases

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
     <label>email ID</label><br>
     <input type="text" name="email_id">
     <br>
-    <label>Title ID</label><br>
-    <input type="text" name="title_id">
+    <label>Kahani ID</label><br>
+    <input type="text" name="kahani_id">
     <br>
     <label>Language Preference</label><br>
     <input type="text" name="language">
